bitfields/tests/compile_error_cases/panics/bitfield_force_panic.stderr
error: A major unexpected error has occurred. If possible, please file an issue with code reproducing the error to https://github.com/gregorygaines/bitfields-rs/issues: Forced panic for testing purposes
 --> tests/compile_error_cases/panics/bitfield_force_panic.rs:3:1
  |
3 | #[bitfield(u8, force_panic = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
