bitfields/tests/compile_error_cases/panics/bitfield_force_panic.rs
use bitfields::bitfield;

#[bitfield(u8, force_panic = true)]
pub struct Bitfield {
    a: u8,
}

fn main() {}

